Fixed jquery-ui-selectmenu z-index so it doesn't appear behind other stuff.

--- a/public/stylesheets/jquery-ui-selectmenu.css
+++ b/public/stylesheets/jquery-ui-selectmenu.css
@@ -2,7 +2,7 @@
 ----------------------------------*/
 .ui-selectmenu { display: block; position:relative; height:1.5em; text-decoration: none; overflow:hidden; vertical-align: middle;}
 .ui-selectmenu-icon { position:absolute; right:6px; margin-top:-8px; top: 50%; }
-.ui-selectmenu-menu { padding:0; margin:0; list-style:none; position:absolute; top: 0; visibility: hidden; overflow: auto; }
+.ui-selectmenu-menu { padding:0; margin:0; list-style:none; position:absolute; top: 0; visibility: hidden; overflow: auto; z-index: 5; }
 .ui-selectmenu-open { visibility: visible; }
 .ui-selectmenu-menu-popup { margin-top: -1px; }
 .ui-selectmenu-menu-dropdown { }
